side-bar nav built

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -23,6 +23,9 @@
 }
 
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--color-grey-dark-1);
 
   flex: 0 0 18%;
@@ -31,4 +34,5 @@
 .hotel-view {
   background-color: orangered;
   flex: 1;
+  height: 80rem;
 }
