--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -36,6 +36,7 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-2);
@@ -43,7 +44,6 @@
 }
 
 .description {
-  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
@@ -52,5 +52,8 @@
 }
 
 .user-reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   flex: 1;
 }
