tiny screen support

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -41,7 +41,7 @@ $bp-large: 68.75em; //1100px
 $bp-medium: 56.25em; //900px
 $bp-small: 37.5em; //600px
 $bp-smallest: 31.25em; //500px
-$bp-420: 26.25em; //420px
+$bp-tiny: 26.25em; //420px
 
 * {
   margin: 0;
@@ -60,6 +60,10 @@ html {
 
   @media only screen and (max-width: $bp-large) {
     font-size: 50%;
+  }
+
+  @media only screen and (max-width: $bp-tiny) {
+    font-size: 40%;
   }
 }
 
