--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ html {
   @media only screen and (max-width: 68.75em) {
     html {
       font-size: 50%; } }
+  @media only screen and (max-width: 26.25em) {
+    html {
+      font-size: 40%; } }
 
 body {
   font-family: "Open Sans", sans-serif;
