--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -245,7 +245,7 @@
   align-items: center;
   border-bottom: var(--line);
 
-  @media only screen and (max-width: $bp-420) {
+  @media only screen and (max-width: $bp-tiny) {
     flex-direction: column;
   }
 
@@ -261,7 +261,7 @@
       padding: 1.25rem 2rem;
     }
 
-    @media only screen and (max-width: $bp-420) {
+    @media only screen and (max-width: $bp-tiny) {
       font-size: 1.5rem;
       padding: 0.2rem 1.75rem;
     }
@@ -271,7 +271,7 @@
     margin-right: auto;
     display: flex;
 
-    @media only screen and (max-width: $bp-420) {
+    @media only screen and (max-width: $bp-tiny) {
       display: none;
     }
   }
@@ -287,7 +287,7 @@
     font-size: 1.2rem;
     display: flex;
     align-items: center;
-    @media only screen and (max-width: $bp-420) {
+    @media only screen and (max-width: $bp-tiny) {
       margin-bottom: 0.7rem;
     }
   }
@@ -311,7 +311,7 @@
       padding: 0 1.5rem;
     }
 
-    @media only screen and (max-width: $bp-420) {
+    @media only screen and (max-width: $bp-tiny) {
       flex-direction: row;
       margin: 0;
     }
@@ -326,7 +326,7 @@
       font-size: 1.8rem;
     }
 
-    @media only screen and (max-width: $bp-420) {
+    @media only screen and (max-width: $bp-tiny) {
       font-size: 2.5rem;
       margin-right: 0.8rem;
     }
@@ -340,7 +340,7 @@
       font-size: 0.5rem;
     }
 
-    @media only screen and (max-width: $bp-420) {
+    @media only screen and (max-width: $bp-tiny) {
       font-size: 1.3rem;
     }
   }
