--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -9,6 +9,7 @@
 /// SEARCH
 .search {
   flex: 0 0 40%;
+  position: relative;
 
   display: flex;
   align-items: center;
@@ -66,6 +67,35 @@
     width: 2rem;
     fill: var(--color-grey-dark-3);
   }
+
+  &__input:not(:placeholder-shown):focus ~ &__suggestions {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__suggestions {
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    border: var(--line);
+    margin-top: 1rem;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background-color: #fff;
+    transition: all 0.2s;
+  }
+
+  &__suggestion-item {
+    z-index: 10;
+    padding: 1rem;
+    border-bottom: var(--line);
+    cursor: pointer;
+
+    &:hover {
+      background-color: var(--color-grey-light-2);
+    }
+  }
 }
 
 //////////////////////////
@@ -118,6 +148,80 @@
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem;
+  }
+
+  &__user {
+    position: relative;
+  }
+
+  &__user-menu {
+    z-index: 10;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    transition: all 0.2s ease-out;
+  }
+
+  &__user:hover &__user-menu {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__user-menu-item {
+    padding: 1rem 3.5rem;
+    border-top: var(--line);
+
+    &:hover {
+      background-color: var(--color-grey-light-2);
+    }
+  }
+
+  &__message:hover &__message-menu {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__message-menu {
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 100%;
+    width: max-content;
+    left: -150%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.2s;
+
+    &-message {
+      margin-right: auto;
+    }
+
+    &-photo {
+      width: 3.25rem;
+      height: 3.25rem;
+      border-radius: 50%;
+      margin-right: 1.25rem;
+    }
+
+    &-item {
+      display: flex;
+      padding: 1.25rem 2rem;
+      border-bottom: var(--line);
+
+      &:hover {
+        background-color: var(--color-grey-light-2);
+      }
+    }
+
+    &-timestamp {
+      margin-left: 2rem;
+    }
   }
 }
 
@@ -231,9 +335,33 @@
 
 .gallery {
   display: flex;
+
+  &__item {
+    position: relative;
+  }
+
+  &__caption {
+    padding: 0 1rem;
+    background-color: rgba(0, 0, 0, 0.6);
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    opacity: 0;
+    color: #fff;
+    position: absolute;
+    top: 70%;
+    right: 50%;
+    transform: translate(50%, 0%);
+    transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+  }
+
   &__photo {
     width: 100%;
     display: block;
+  }
+
+  &__item:hover &__caption {
+    opacity: 1;
+    top: 80%;
   }
 }
 
